# Yadro_CPP_course

lab1/: CMakeLists.txt
lab1/src/: bitset.cpp  bitset.h
lab1/tests/: tests.cpp
lab2/: CMakeLists.txt
lab2/src/: CRC32.h
lab2/tests/: tests.cpp
lab3/: CMakeLists.txt
lab3/src/: Literals.h
lab3/tests/: tests.cpp
lab4/: .clang-format  CMakeLists.txt
lab4/src/: RPN.h
lab4/tests/: tests.cpp
lab6/: CMakeLists.txt  readme.txt
lab6/src/: BufferingWriter.cpp  BufferingWriter.h  Record.h
lab6/tests/: tests.cpp
lab7/: CMakeLists.txt
lab7/src/: IsInList.h
lab7/tests/: tests.cpp
lab8/: .clang-format  CMakeLists.txt
lab8/src/: Tuple.h
lab8/tests/: tests.cpp
